# sdo-tool

./: Cargo.toml  LICENSE  NOTICE  README.md
.github/workflows/: jekyll-gh-pages.yml  release.yml  rust.yml  test.yml
crates/bdf/: Cargo.toml
crates/ccitt/: Cargo.toml  README.md  codes.md
crates/ccitt/examples/: ascii-art.rs  ccitt2pbm.rs  tiffdecode.rs
crates/ccitt/src/: ascii_art.rs  bit_iter.rs  bits.rs  color.rs  error.rs  image.rs  lib.rs  store.rs  terminals.rs
crates/ccitt/src/g3/: decode_iter.rs  mod.rs
crates/ccitt/src/g42d/: common.rs  decode.rs  decode_iter.rs  encode.rs  mod.rs  terminals.rs
crates/ccitt/src/g42d/decode/: bits.rs  mod.rs
crates/ccitt/src/g42d/decode_iter/: image.rs  mod.rs  terminals.rs
crates/esc-p/: Cargo.toml
crates/esc-p/src/: lib.rs
crates/pcf/: Cargo.toml
crates/pcf/examples/: pcf-info.rs
crates/pcf/src/: data.rs  lib.rs  parser.rs
crates/pdf/: CHANGES.md  Cargo.toml  README.md
crates/pdf/examples/: pdf-dump.rs  pdf-empty.rs  pdf-hello.rs  pdf-test.rs
crates/pdf/examples/pdf-dump/: compat.rs  main.rs
crates/pdf/src/: common.rs  encoding.rs  high.rs  lib.rs  low.rs  lowering.rs  main.rs  util.rs  write.rs  xmp.rs
crates/pdf/src/high/: cmap.rs  font.rs  metadata.rs  mod.rs  outline.rs  page.rs  stream.rs  xobject.rs
crates/sdo/: Cargo.toml
crates/sdo-fonts/: Cargo.toml  build.rs
crates/sdo-pdf/: Cargo.toml
crates/sdo-pdf/examples/: cmap.rs
crates/sdo-pdf/src/: cmap.rs  font.rs  image.rs  info.rs  lib.rs  sdoc.rs
crates/sdo-pdf/src/sdoc/: contents.rs  mod.rs  text.rs
crates/sdo-ps/: Cargo.toml
crates/sdo-tests/: Cargo.toml
crates/sdo-tests/src/: lib.rs
crates/sdo-tests/tests/: hayro.rs  mupdf.rs  pdfium.rs  poppler.rs
crates/sdo-util/: Cargo.toml
crates/sdo-web/: Cargo.toml  index.html  index.mjs
crates/sdo-web/src/: chset.rs  convert.rs  dom.rs  glue.rs  lib.rs  sdoc.rs  staged.rs  vfs.rs
crates/sdo-web/src/glue/: fs.rs  mod.rs
crates/sdo/src/: lib.rs  sdoc.rs
crates/sdo/src/font/: dvips.rs  editor.rs  encoding.rs  mod.rs  pdf.rs  printer.rs
crates/sdo/src/images/: imc.rs  mod.rs
crates/sdo/src/ps/: mod.rs
crates/sdo/src/raster/: mod.rs
crates/sdo/src/sdoc/: container.rs  mod.rs
crates/sdo/src/util/: data.rs
crates/signum/: Cargo.toml  README.md
crates/signum/examples/: bimc2pbm.rs  chmap.rs  chset2bdf.rs  code-kb.rs  sigfontdiff.rs
crates/signum/res/: TEST.IMC
crates/signum/src/: lib.rs
crates/signum/src/chsets/: cache.rs  code.rs  editor.rs  encoding.rs  error.rs  mod.rs  output.rs  printer.rs
crates/signum/src/chsets/encoding/: atari.rs  mod.rs
crates/signum/src/chsets/metrics/: mod.rs  widths.rs
crates/signum/src/chsets/v2/: mod.rs
crates/signum/src/docs/: container.rs  cset.rs  hcim.rs  header.rs  mod.rs  pbuf.rs  sysp.rs  tebu.rs
crates/signum/src/docs/v1/: container.rs  hcim.rs  mod.rs  pbuf.rs  tebu.rs
crates/signum/src/docs/v3/: flptrs.rs  foused.rs  header.rs  kapit.rs  mod.rs  stream.rs
crates/signum/src/font/: editor.rs  mod.rs
crates/signum/src/help/: hlp.rs  mod.rs
crates/signum/src/images/: imc.rs  mod.rs
crates/signum/src/raster/: doc.rs  font.rs  mod.rs  page.rs  scalers.rs  trace.rs  util.rs
crates/signum/src/sdoc/: container.rs  cset.rs  header.rs  pbuf.rs  sysp.rs
crates/signum/src/util/: bit_iter.rs  bit_writer.rs  buf.rs  bytes.rs  data.rs  file_format.rs  four_cc.rs  mod.rs  parsers.rs  vfs.rs
crates/texfonts/: Cargo.toml
crates/texfonts/examples/: pk-info.rs
crates/texfonts/src/: lib.rs  pk.rs
crates/ttf2sig/: Cargo.toml
crates/ttf2sig/src/: kerning.rs  lib.rs  ligature.rs  main.rs
docs/: 404.html  CNAME  Gemfile  _config.yml  changelog.md  damaged.md  documents.md  examples.md  fdiscs.md  font-mappings.md  font-other.md  format-bimc.md  format-eset.md  format-sdoc.md  implementation.md  index.md  prior-art.md  references.md  resources.md
docs/_chsets/: A-SCHWAB.md  ABC.md  ABCENGL.md  ABRACADA.md  ACHILLE.md  ACMR12.md  ALEC.md  ALT-DSCH.md  ALTGR.md  ALTGRIE.md  ALTÄGYP2.md  AMERICAN.md  AMTYB-EM.md  AMTYBD-K.md  AMTYBD-M.md  ANGERTH1.md  ANGERTH2.md  ANNA.md  ANNOUN-2.md  ANT-CY.md  ANT-OST.md  ANTI-CAP.md  ANTIBICO.md  ANTIK-PM.md  ANTIK-UP.md  ANTIK4Ü5.md  ANTIKBIG.md  ANTIKLIG.md  ANTIKPHY.md  ANTIKR-G.md  ANTIKR-K.md  ANTIKR-M.md  ANTIKR-O.md  ANTIKR-P.md  ANTIKR13.md  ANTIKRO.md  ANTIKRO1-alt.md  ANTIKRO1.md  ANTIKRO2.md  ANTIKROA.md  (+1089 more)
docs/_data/: tags.yaml
docs/_examples/: Angerthas.md  Hyroglyphen.md  THEOLFONT.md
docs/_fdiscs/: anna.md  arabicum.md  diana.md  euro.md  futur-euro.md  futur.md  gloria.md  jona.md  julia.md  lisa.md  professional.md  rokwel.md  sifox-anwendung1.md  sifox-anwendung2.md  sifox-exot1.md  sifox-exot2.md  sifox-exot3.md  sifox-finnugor.md  sifox-griechisch.md  sifox-jugo-p24-p9.md  sifox-musik.md  sifox-musik2.md  sifox-osteuropa1.md  sifox-osteuropa2.md  sifox-theologie.md  sifox01.md  sifox02.md  sifox03.md  sifox04.md  sifox05.md  sifox06.md  sifox07.md  sifox08.md  sifox09.md  sifox10.md  sifox11.md  sifox12.md  sifox13.md  sifox14.md  sifox15.md  (+49 more)
docs/_includes/: chset-disc.html  chset-list.html  fdisc-index.html  tag-list.html
docs/_layouts/: default.html  example.html  fdisc.html  page.html
docs/chsets/: all.md  anna.md  euro.md  futur.md  index.md  julia.md  mappings.md  missing.md  monospace.md  other.md  professional.md  sifox01.md  sifox02.md  sifox03.md  sifox04.md  sifox05.md  sifox14.md  standard.md  tags.md
docs/formats/: bimc.md  eset.md  index.md  pset.md  sdoc.md  sig3.md
docs/signum/: created-with.md  documents.md  font-editors.md  font-modifiers.md  index.md  keybindings.md  printer-drivers.md  references.md  resources.md
examples/: decrypt.rs  hello-world.rs
gui/: .gitignore
mappings/: ANTIKRO.TXT  ANTI_CS.TXT  ANTI_CS1.TXT  FRAKTUR1.TXT  GRIECH.TXT  GROTFE.TXT  GROTMIKR.TXT  MATHEM.TXT  MATHEM1.TXT  NORMANDE.TXT  PINSEL.TXT  missing.txt
pdf/: Cargo.toml
pdf/src/: main.rs
src/: font.rs  imc.rs  lib.rs  main.rs  sdoc.rs  ttf.rs  util.rs
src/cli/: bimc.rs  font.rs  keyboard.rs  mod.rs  opt.rs  ps.rs  sdoc.rs  util.rs
(+35 files in other folders)
