[package]
name = "sdo-tool"
version = "0.4.0"
edition = "2018"
license = "CC-BY-NC-ND-3.0-DE"

[dependencies]
clap = { version = "3.1", features = ["derive"] }
color-eyre = { version = "0.5", default-features = false }
prettytable-rs = { version = "0.8", default-features = false }
log = "0.4"
env_logger = { version = "0.8.4", default-features = false, features = ["termcolor", "atty"] }
bitflags = "1.2"
thiserror = "1.0"
nom-supreme = { version = "0.7", features = ["error"] }
ccitt-t4-t6 = { path = "crates/ccitt" }
pdf-create = { path = "crates/pdf" }
sdo-pdf = { path = "crates/sdo-pdf" }
sdo-ps = { path = "crates/sdo-ps" }
ron = "0.6"
regex = "1.5"
serde = "1.0"

[dependencies.signum]
path = "crates/signum"
features = ["image"]

[dependencies.image]
default-features = false
version = "0.23"
features = ["png"]

[dev-dependencies]
pdf = "0.7"

[workspace]
members = ["crates/*"]
