[package]
name = "sdo-tool"
version = "0.3.2"
authors = ["daniel"]
edition = "2018"
default-run = "sdo-tool"

[dependencies]
color-eyre = { version = "0.6", default-features = false }
prettytable-rs = { version = "0.10", default-features = false }
clap = { version = "3.1", features = ["derive"] }
log = "0.4"
env_logger = { version = "0.8.4", default-features = false }
bitflags = "2.8"
thiserror = "1.0"
nom-supreme = "0.8"
ccitt-t4-t6 = { path = "crates/ccitt" }
pdf-create = { path = "crates/pdf" }
sdo-pdf = { path = "crates/sdo-pdf" }
sdo-ps = { path = "crates/sdo-ps" }
sdo-util = { path = "crates/sdo-util" }
signum = { path = "crates/signum", features = ["image"] }
pdf = "0.7"
ron = "0.6"
serde = "1.0"
futures-lite = "2.3.0"

[dependencies.image]
default-features = false
version = "0.24"
features = ["png"]

[dev-dependencies]
pdf = "0.7"

[workspace]
members = ["crates/*"]

[patch.crates-io.fontdue]
# variable font support
git = 'https://github.com/xiphoseer/fontdue.git'
rev = "7eb87c059487ff8a42e2488e40aaa6e1f1ac4480"
#path = "../repos/fontdue"
