[package]
name = "sdo-tool"
version = "0.3.2"
authors = ["Xiphoseer <xiphoseer@mailbox.org>"]
license = "AGPL-3.0-only"
edition = "2018"
default-run = "sdo-tool"

[dependencies]
color-eyre.workspace = true
prettytable-rs = { version = "0.10", default-features = false }
clap = { version = "3.1", features = ["derive"] }
log = "0.4"
env_logger = { version = "0.8.4", default-features = false }
bitflags = "2.8"
thiserror.workspace = true
nom-supreme = "0.8"
ccitt-t4-t6 = { path = "crates/ccitt" }
pdf-create = { path = "crates/pdf" }
sdo-pdf = { path = "crates/sdo-pdf" }
sdo-ps = { path = "crates/sdo-ps" }
sdo-util = { path = "crates/sdo-util" }
signum = { path = "crates/signum", features = ["image"] }
ron.workspace = true
serde = "1.0"
futures-lite = "2.3.0"

[dependencies.image]
default-features = false
version = "0.25"
features = ["png"]

[dev-dependencies]
pdf.workspace = true

[workspace]
members = ["crates/*"]

[workspace.dependencies]
color-eyre = { version = "0.6", default-features = false }
pdf = "0.9"
ron = "0.12"
thiserror = "2"
tiff = "0.11"

[patch.crates-io.fontdue]
# variable font support
git = 'https://github.com/xiphoseer/fontdue.git'
rev = "7eb87c059487ff8a42e2488e40aaa6e1f1ac4480"
#path = "../repos/fontdue"
