[package]
name = "ccitt-t4-t6"
version = "0.1.0"
authors = ["Xiphoseer <xiphoseer@mailbox.org>"]
edition = "2018"
license = "MPL-2.0"
readme = "README.md"
description = "Implementation of ITU-T T.4 & T.6 (CCITTFaxDecode)"
repository = "https://github.com/Xiphoseer/sdo-tool/tree/main/crates/ccitt"
homepage = "https://xiphoseer.github.io/sdo-tool/implementation#ccitt-t4-t6"

[dependencies]
thiserror = "1"

[dev-dependencies]
structopt = "0.3"
color-eyre = { version = "0.5", default-features = false }