[package]
name = "ccitt-t4-t6"
version = "0.2.0"
authors = ["Xiphoseer <xiphoseer@mailbox.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Implementation of ITU-T T.4 & T.6 (CCITTFaxDecode)"
repository = "https://github.com/Xiphoseer/sdo-tool/tree/main/crates/ccitt"
homepage = "https://xiphoseer.github.io/sdo-tool/implementation#ccitt-t4-t6"

[features]
debug = []

[dependencies]
thiserror.workspace = true

[dev-dependencies]
argh = "0.1.13"
color-eyre.workspace = true
tiff.workspace = true
