[package]
name = "esc-p"
description = "ESC/P sequences"
version = "0.1.0"
edition = "2021"
homepage = "https://sdo.dseiler.eu/implementation#escp"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
ctrlc = "3.4.5"
image = { version = "0.25.5", features = ["png"], default-features = false }
nix = { version = "0.30.1", features = ["fs"] }
