[package]
name = "pcf"
version = "0.1.0"
authors = ["Xiphoseer <xiphoseer@mailbox.org>"]
edition = "2018"
description = "Implementation of the Pre-Compiled-Font format (PCF / X11)"

[dependencies]
nom = "7"
thiserror = { workspace = true }
bitflags = "2.8"

[dev-dependencies]
color-eyre = { version = "0.5", default-features = false }
clap = { version = "3.1", features = ["derive"] }
nom-supreme = "0.8"
