[package]
name = "pdf-create"
version = "0.3.0"
authors = ["Xiphoseer <xiphoseer@mailbox.org>"]
edition = "2018"
license = "MPL-2.0"
readme = "README.md"
description = "low-level, strongly-typed PDF creation library"
repository = "https://github.com/Xiphoseer/sdo-tool/tree/main/crates/pdf"
homepage = "https://sdo.dseiler.eu/implementation#pdf-create"

[features]
js = ["uuid/js"]

[dependencies]
chrono = "0.4"
md5 = "0.7"
bitflags = "2.8"
flate2 = "1.0"
#guid-create = "0.2"
uuid = { version = "1.12", features = ["v4"] }
smallvec = { version = "1.14.0", features = ["const_new"] }

[dev-dependencies]
color-eyre = { version = "0.5", default-features = false }
ccitt-t4-t6 = { version = "0.2", path = "../ccitt" }
pdf = "0.7"
