[package]
name = "sdo-pdf"
version = "0.2.0"
authors = ["Xiphoseer <xiphoseer@mailbox.org>"]
edition = "2018"

[dependencies]
signum = { path = "../signum" }
sdo-ps = { path = "../sdo-ps" }
pdf-create = { path = "../pdf" }
ccitt-t4-t6 = { path = "../ccitt" }

[dev-dependencies]
color-eyre = { version = "0.5", default-features = false }
clap = { version = "3.1", features = ["derive"] }
