[package]
name = "sdo-pdf"
version = "0.2.0"
authors = ["Xiphoseer <xiphoseer@mailbox.org>"]
license = "AGPL-3.0-only"
edition = "2018"

[features]
js = ["pdf-create/js"]

[dependencies]
sdo-ps = { path = "../sdo-ps" }
pdf-create = { path = "../pdf" }
ccitt-t4-t6 = { path = "../ccitt" }
log = "0.4"

[dependencies.signum]
path = "../signum"
features = ["chrono"]

[dev-dependencies]
color-eyre.workspace = true
clap = { version = "3.1", features = ["derive"] }
