[package]
name = "sdo-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.61"
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.61", features = [
    "Window",
    "Document",
    "HtmlElement",
    "HtmlInputElement",
    "Event",
    "Blob",
    "FileReader",
    "FileList",
    "File"
] }
signum = { path = "../signum", features = ["image"] }
serde-wasm-bindgen = "0.4.5"
console_log = { version = "1.0.0", features = ["wasm-bindgen"] }
log = "0.4.17"
