[package]
name = "sdo-web"
version = "0.1.0"
license = "AGPL-3.0-only"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.61"
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.68", features = [
    "Window",
    "Document",
    "CssStyleDeclaration",
    "HtmlElement",
    "HtmlAnchorElement",
    "HtmlButtonElement",
    "HtmlImageElement",
    "HtmlInputElement",
    "DomTokenList",
    "Event",
    "Blob",
    "FileReader",
    "FileList",
    "File",
    "BlobPropertyBag",
    "Url",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageBitmap",
    "Navigator",
    "StorageManager",
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemHandleKind",
    "FileSystemGetFileOptions",
    "FileSystemGetDirectoryOptions",
    "FileSystemWritableFileStream"
] }
signum = { path = "../signum", features = ["image"] }
sdo-util = { path = "../sdo-util" }
sdo-fonts = { path = "../sdo-fonts" }
sdo-pdf = { path = "../sdo-pdf", features = ["js"]}
serde-wasm-bindgen = "0.4.5"
console_log = { version = "1.0.0", features = ["wasm-bindgen"] }
log = "0.4"
bstr = "1.4.0"
wasm-bindgen-futures = "0.4.42"
