[package]
name = "signum"
version = "0.3.0"
authors = ["Xiphoseer <xiphoseer@mailbox.org>"]
edition = "2018"
license = "MPL-2.0"
readme = "README.md"
description = "Implementation of Signum! (1986) file formats"
repository = "https://github.com/Xiphoseer/sdo-tool/tree/main/crates/signum"
homepage = "https://xiphoseer.github.io/sdo-tool/implementation#signum"

[dependencies]
nom = "6.1.0"
thiserror = "1.0"
bitflags = "1.2"
displaydoc = "0.2"
log = "0.4"
bstr = "1.2.0"
serde = { version = "1.0.152", features = ["derive"] }

[dependencies.image]
optional = true
default-features = false
version = "0.24"
features = ["png"]

[dev-dependencies]
color-eyre = { version = "0.5", default-features = false }
structopt = "0.3"
prettytable-rs = "0.8"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
