[package]
name = "signum"
version = "0.3.0"
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Implementation of Signum! (1986) file formats"
repository = "https://github.com/Xiphoseer/sdo-tool/tree/main/crates/signum"
homepage = "https://xiphoseer.github.io/sdo-tool/implementation#signum"

[features]
chrono = ["dep:chrono"]
default = ["chrono"]

[dependencies]
nom = "7"
thiserror = "1.0"
bitflags = { version = "2.8", features = ["serde"] }
displaydoc = "0.2"
log = "0.4"
bstr = "1.2.0"
serde = { version = "1.0.152", features = ["derive"] }
smallvec = { version = "1.14.0", features = ["const_new"] }

[dependencies.image]
optional = true
default-features = false
version = "0.24"
features = ["png"]

[dependencies.chrono]
optional = true
default-features = false
version = "0.4"

[dev-dependencies]
color-eyre = { version = "0.5", default-features = false }
clap = { version = "3.1", features = ["derive"] }
prettytable-rs = { version = "0.10", default-features = false }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
