[package]
name = "texfonts"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
nom = "7"
thiserror = "1.0"
bitflags = "2.8"

[dev-dependencies]
color-eyre = { version = "0.5", default-features = false }
clap = { version = "3.1", features = ["derive"] }
nom-supreme = "0.8"
